--- a/Resources/Private/Layouts/Page/Default.html
+++ b/Resources/Private/Layouts/Page/Default.html
@@ -1,2 +1,3 @@
 <f:render partial="Header" arguments="{mainnavigation: mainnavigation}" />
 <f:render section="Main" />
+<f:render partial="Footer" />
